// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot testing > Default 1`] = `
<a
  class=" group inline-flex min-w-[110px] flex-col items-center justify-center gap-2 border border-none no-underline"
  href="/#"
>
  <span
    aria-hidden="true"
    class="text-primary-gray material-symbols-outlined size-48 group- flex size-[72px] select-none items-center justify-center self-center rounded-full bg-bg-gray hover:text-accent"
  >
    target
  </span>
  <span
    class="text-button-sm text-primary-gray group-hover:text-accent group-hover:underline"
  >
    Default
  </span>
</a>
`;

exports[`Snapshot testing > Disabled, non-selected 1`] = `
<a
  class=" group inline-flex min-w-[110px] flex-col items-center justify-center gap-2 border border-none no-underline"
  href="/#"
>
  <span
    aria-hidden="true"
    class="text-primary-gray material-symbols-outlined size-48 group- flex size-[72px] select-none items-center justify-center self-center rounded-full bg-bg-gray hover:text-accent"
  >
    target
  </span>
  <span
    class="text-button-sm text-primary-gray group-hover:text-accent group-hover:underline"
  >
    Disabled, nonselected
  </span>
</a>
`;

exports[`Snapshot testing > Disabled, selected 1`] = `
<a
  class=" group inline-flex min-w-[110px] flex-col items-center justify-center gap-2 border border-none no-underline"
  href="/#"
>
  <span
    aria-hidden="true"
    class="text-white material-symbols-outlined size-48 group- flex size-[72px] select-none items-center justify-center self-center rounded-full bg-accent"
  >
    target
  </span>
  <span
    class="text-button-sm text-accent group-hover:text-accent group-hover:underline"
  >
    Disabled, nonselected
  </span>
</a>
`;

exports[`Snapshot testing > Disabled, selected 2`] = `
<a
  class=" group inline-flex min-w-[110px] flex-col items-center justify-center gap-2 border border-none no-underline"
  href="/#"
>
  <span
    aria-hidden="true"
    class="text-white material-symbols-outlined size-48 group- flex size-[72px] select-none items-center justify-center self-center rounded-full bg-accent"
  >
    target
  </span>
  <span
    class="text-button-sm text-accent group-hover:text-accent group-hover:underline"
  >
    Disabled, nonselected
  </span>
</a>
`;

exports[`Snapshot testing > selected 1`] = `
<a
  class=" group inline-flex min-w-[110px] flex-col items-center justify-center gap-2 border border-none no-underline"
  href="/#"
>
  <span
    aria-hidden="true"
    class="text-white material-symbols-outlined size-48 group- flex size-[72px] select-none items-center justify-center self-center rounded-full bg-accent"
  >
    target
  </span>
  <span
    class="text-button-sm text-accent group-hover:text-accent group-hover:underline"
  >
    Selected
  </span>
</a>
`;
